--- a/Task_1/index.html
+++ b/Task_1/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="./images/icons8-tech-16.png" type="image/x-icon">
     <title>Landing Page</title>
 </head>
 
