--- a/Task_2/index.html
+++ b/Task_2/index.html
@@ -133,7 +133,7 @@
                     <p>
                         This website<br />
                         Use : HTML, CSS<br /><br />
-                        GitHub Link: <a href="" alt="">Click Here</a>
+                        GitHub Link: <a href="https://dineshpc.github.io/CODSOFT/Task_2/" alt="">Click Here</a>
                     </p>
                 </span>
             </div>
@@ -153,7 +153,7 @@
                     <p>
                         Frontend design for login & Signup webpage<br />
                         Use : HTML, CSS , JavaScript<br /><br />
-                        GitHub Link: <a href="" alt="">Click Here</a>
+                        GitHub Link: <a href="" alt="Not Available">Click Here</a>
                     </p>
                 </span>
             </div>
@@ -172,7 +172,7 @@
                         users on Discord. It can answer questions, perform some simple
                         tasks.<br />
                         Use : Python<br /><br />
-                        GitHub Link: <a href="" alt="">Click Here</a>
+                        GitHub Link: <a href="https://github.com/DineshPC/ChatGPT-discord-bot" alt="">Click Here</a>
                     </p>
                 </span>
             </div>
